# dirplot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  K8S.md  Makefile  NEW-TODO.md  README.md  REMOTE-ACCESS.md  SECURITY.md  events.jsonl  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml
api/: index.html
archives/: index.html
cli/: index.html
docs/: API.md  ARCHIVES.md  CLI.md  EXAMPLES.md  README.md  REMOTE-ACCESS.md  SSH_DESIGN.md  api.md  archives.md  cli.md  examples.md  guides.md  index.md  installation.md  remote-sources.md  serve.md  troubleshooting.md
examples/: index.html
guides/: index.html
installation/: index.html
remote-sources/: index.html
scripts/: apng_frames.py  make_docs_images.sh  make_examples_images.sh  make_fixtures.py  open_terminals.sh  watch_events.py
search/: search_index.json
serve/: index.html
src/dirplot/: __init__.py  __main__.py  _overview.py  app.py  archives.py  colors.py  console.py  defaults.py  display.py  docker.py  filters.py  gdrive.py  git_scanner.py  github.py  hg_scanner.py  k8s.py  main.py  pathlist.py  pipeline.py  render.py  render_png.py  replay_scanner.py  s3.py  scanner.py  scanner_v2.py  ssh.py  svg_render.py  terminal.py  tree_json.py  vpath.py  watch.py
src/dirplot/commands/: diff.py  metrics.py  misc.py  replay.py  serve.py  treemap.py  treemap_simple.py  vcs.py  watch.py
src/dirplot/helpers/: animation.py  highlights.py  scan.py  time.py
src/dirplot/sources/: __init__.py  archive.py  docker.py  filesystem.py  github.py  k8s.py  s3.py  ssh.py
src/dirplot/web/: server.py
src/dirplot/web/static/: style.css  treemap.js
src/dirplot/web/templates/: index.html
tests/: conftest.py  test_archives.py  test_cli.py  test_colors.py  test_console.py  test_diff.py  test_display.py  test_docker.py  test_drawing.py  test_filters.py  test_gdrive.py  test_git_github.py  test_git_local.py  test_git_scanner.py  test_github.py  test_hg_local.py  test_hg_scanner.py  test_highlight.py  test_k8s.py  test_makefile.py  test_pathlist.py  test_pipeline.py  test_render.py  test_render_png.py  test_replay_scanner.py  test_s3.py  test_scanner.py  test_size_filter.py  test_sources.py  test_ssh.py  test_svg_render.py  test_terminal.py  test_vpath.py  test_watch.py  test_watch_animate.py  test_watch_events_script.py
tests/fixtures/: events.jsonl  sample.7z  sample.apk  sample.cpio  sample.iso  sample.rar  sample.tar  sample.tar.bz2  sample.tar.zst  sample.tgz  sample.txz  sample.tzst  sample.whl  sample.xar
troubleshooting/: index.html
